# cttc-data-science

./: .gitignore  GEMINI.md  README.md  analyze_data.py  app.py  clean_data.py  generate_ml_plots.py  get_comparison.py  model.py  pyproject.toml  skills-lock.json  titanic.ipynb  titanic_model.joblib  visualize_data.py
.agents/skills/data-scientist/: SKILL.md
.agents/skills/developing-with-streamlit/: SKILL.md
.agents/skills/developing-with-streamlit/skills/building-streamlit-dashboards/: SKILL.md
.agents/skills/developing-with-streamlit/skills/connecting-streamlit-to-snowflake/: SKILL.md
.agents/skills/developing-with-streamlit/skills/creating-streamlit-themes/: SKILL.md
.agents/skills/developing-with-streamlit/skills/setting-up-streamlit-environment/: SKILL.md
.agents/skills/developing-with-streamlit/templates/apps/: README.md
.agents/skills/developing-with-streamlit/templates/apps/dashboard-companies/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-compute/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-compute-snowflake/: pyproject.toml  snowflake.yml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-feature-usage/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-metrics/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-metrics-snowflake/: pyproject.toml  snowflake.yml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-seattle-weather/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-stock-peers/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/apps/dashboard-stock-peers-snowflake/: pyproject.toml  snowflake.yml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/themes/: README.md  manage.py
.agents/skills/developing-with-streamlit/templates/themes/_configs/: github.toml  snowflake.toml  solarized-light.toml  spotify.toml  stripe.toml
.agents/skills/developing-with-streamlit/templates/themes/_shared/: streamlit_app.py
.agents/skills/developing-with-streamlit/templates/themes/_templates/: pyproject.toml.tmpl
.agents/skills/developing-with-streamlit/templates/themes/dracula/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/themes/github/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/themes/minimal/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/themes/nord/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/themes/snowflake/: pyproject.toml  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/themes/solarized-light/: pyproject.toml  streamlit_app.py
latex/: main.tex
titanic/: cleaned.csv  cleaned_train.csv
(+4 files in other folders)
