[project]
name = "cttc-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
]
