[project]
name = "dashboard-metrics"
version = "1.0.0"
description = "A metrics dashboard template showing time series with sparklines and filtering"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "snowflake-connector-python>=3.3.0",
    "streamlit[snowflake]>=1.54.0",
]
