[project]
name = "dashboard-seattle-weather"
version = "1.0.0"
description = "An example dashboard exploring the Seattle Weather dataset"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.2.3",
    "snowflake-connector-python>=3.3.0",
    "streamlit[snowflake]>=1.54.0",
    "vega-datasets>=0.9.0",
]
